src/App.css
@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100;200;300;400;500;600;700&display=swap');

*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Roboto Mono', monospace;
  scroll-behavior: smooth;
  /* overflow-x: hidden; */
}
/* light mode styles */
.bg-light {
  background-color: #fff;
}

.heading-light {
  color: #0a192f;
}

.para-light {
  color: #0a192f;
}

.btn-light {
  background-color: #0a192f;
  color: #fff;
  font-size: 15px;
  cursor: pointer;
}

/* Dark Mode Styles */

.bg-dark {
  background-color: #0a192f;
}

.heading-dark {
  color: #fff;
}

.para-dark {
  color: #fff;
}

.btn-dark {
  background-color: #fff;
  color: #111;
  opacity: 1;
}

/* end dark light theme */

.app{
  background-color: #0a192f;
  width: 100%;
  min-height: 100%;
  overflow-x: hidden;
}

.toggle {
	display: none;
	justify-content: center;
	align-items: center;
	color: #fff;
	padding: 20px;
	cursor: pointer;
}

.toggle i {
	font-size: 2rem;
}

.head {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  position: relative;
  margin-top: 50px;
}

.head h1 {
  font-size: 4rem;
  color: rgb(129, 129, 129);
  text-transform: uppercase;
  opacity: 0.3;
  position: relative;
}

.head p {
  display: flex;
  position: absolute;
  width: 30%;
  justify-content: center;
  align-items: center;
  font-size: 1.2rem;
  letter-spacing: 2px;
  color: rgb(129, 129, 129);;
}

.head p span {
  width: 10%;
  border: 1px solid rgb(226, 55, 55);
  margin-right: 30px;
}

#live, #code{
  text-decoration: none;
  width: 40%;
  background: rgb(39, 39, 66);
  padding: 10px;
}

/* experience section */
.experience-container {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 100px;
  width: 100%;
}

.experience-card {
  display: flex;
  flex-direction: column;
  padding: 20px;  margin-left: 30px;
  height: 550px;
  width: 400px;
  background-color: #112240;
  border-radius: 10px;
  box-shadow: -1rem 0 3rem #000;
  transition: 0.4s ease-out;
  position: relative;
  left: 0;
  color: #fff !important;
}

.experience-card:not(:first-child) {
    margin-left: -50px;
}

.experience-card:hover {
  transform: translateY(-20px);
  transition: 0.4s ease-out;
}

.experience-card:hover ~ .experience-card {
  position: relative;
  left: 50px;
  transition: 0.4s ease-out;
}

.job-title {
  color: white;
  font-weight: 300;
  position: absolute;
  left: 20px;
  top: 15px;
}

.job-bar {
  position: absolute;
  top: 120px;
  left: 20px;
  height: 5px;
  width: 90%;
}

.emptybar {
  background-color: #2e3033;
  width: 100%;
  height: 100%;
}

.filledbar {
  position: absolute;
  top: 0px;
  z-index: 3;
  width: 0px;
  height: 100%;
  background: rgb(0,154,217);
  background: linear-gradient(90deg, rgb(226, 88, 83) 0%, #cc2121 65%, rgb(226, 55, 55) 100%);
  transition: 0.6s ease-out;
}

.experience-card:hover .filledbar {
  width: 100%;
  transition: 0.4s ease-out;
}

.experience-card:hover .stroke {
  stroke-dashoffset: 100;
  transition: 0.6s ease-out;
}

.roles{
  display: flex;
  flex-direction: column;
  margin-top: 40px;
}

.roles p{
  font-size: .8rem;
  padding: 10px 0px;
  color: #fff;
  line-height: 1.8;
}

.roles p::before {
  content: "▹";
  margin-right: 3px;
  color: #cc2121;
}

.company{
  font-size: 1rem !important;
  font-weight: 300 !important;
  opacity: .5 !important;
  /* color: #cc2121 !important; */
}

.skills{
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 10px;
}
/* end of experience section */

@media screen and (max-width: 768px) {
  .experience-container {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 50px;
    flex-direction: column;
  }
  
  .experience-card {
    display: flex;
    flex-direction: column;
    padding: 20px;
    height: auto;
    width: 100%;
    margin-top: 20px;
    background-color: #112240;
    border-radius: 10px;
    box-shadow: -1rem 0 3rem #000;
    transition: 0.4s ease-out;
    position: relative;
    left: 0;
    color: #fff !important;
    margin-left: 0px;
  }

  .experience-card:not(:first-child) {
    margin-left: 0px;
  }

.job-bar {
  position: absolute;
  top: 90px;
  left: 20px;
  height: 5px;
  width: 90%;
}



  .skills p{
   font-size: .8rem;
  }

  .nav-options {
    display: flex;
    width: 90%;
    height: 250px;
    position: absolute;
    top: 70px;
    left: -100%;
    background: rgb(39, 39, 66);
    opacity: 0;
    transition: all 0.5s ease;
    flex-direction: column;
    list-style-type: none;
    grid-gap: 0px;
    border: 2px solid #cc2121;
  }
  .nav-options.active {
    background: rgb(39, 39, 66);
    left: 0;
    opacity: 1;
    transition: all 0.5s ease;
    z-index: 1;
    align-content: center;
    padding-left: 0px;
  }

  .toggle {
		display: block;
		justify-content: center;
		align-items: center;
		color: #fff;
		padding: 15px;
    font-size: 2rem;
		cursor: pointer;
		margin-top: 5px;
	}

	.toggle i {
		font-size: 2rem;
	}

  .head {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100%;
    position: relative;
    margin-top: 30px;
  }
  
  .head h1 {
    font-size: 3.5rem;
    color: rgb(129, 129, 129);
    text-transform: uppercase;
    opacity: 0.3;
    position: relative;
    width: 100% !important;
    /* margin-left: 50px !important; */
  }
  
  .head p {
    display: flex;
    position: absolute;
    width: 100%;
    justify-content: center;
    align-items: center;
    font-size: .8rem;
    letter-spacing: 2px;
    color: rgb(129, 129, 129);
  }
  
  .head p span {
    width: 20% !important;
    border: 1px solid rgb(226, 55, 55);
    margin-right: 10px;
  }

  #notable{
    font-size: 2.2rem;
  }
  .e-tab{
    width: 30% !important;
  }

  #live, #code{
    text-decoration: none;
    width: 45%;
    background: rgb(39, 39, 66);
    padding: 10px;
  }
}

